--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "homepage": "https://HR30-coder/react-container",
+  "homepage": "https://HR30-coder.github.io/mfp-container",
   "name": "container",
   "version": "1.0.0",
   "scripts": {
+    "deploy":"gh-pages -d dist",
     "start": "webpack serve --config config/webpack.dev.js",
     "build": "webpack --config config/webpack.prod.js"
   },
