--- a/.github/workflows/container.yaml
+++ b/.github/workflows/container.yaml
@@ -32,7 +32,7 @@ jobs:
 
     - name: Deploy with gh-pages
       run: |
-         git remote set-url origin https://git:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git
+         git remote set-url origin https://git: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@github.com/${GITHUB_REPOSITORY}.git
          npx gh-pages -d dist -u "github-actions-bot <support+actions@github.com>"
       env:
-         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+         GITHUB_TOKEN: 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
