--- a/.github/workflows/container.yaml
+++ b/.github/workflows/container.yaml
@@ -32,7 +32,7 @@ jobs:
 
     - name: Deploy with gh-pages
       run: |
-         git remote set-url origin https://git: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@github.com/${GITHUB_REPOSITORY}.git
-         npx gh-pages -d dist -u "github-actions-bot <support+actions@github.com>"
+       git remote set-url origin https://git:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git
+       npx gh-pages -d build -u "github-actions-bot <support+actions@github.com>"
       env:
-         GITHUB_TOKEN: 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
+       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
